--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "instaclone",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +14,10 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "git": "^0.1.5",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
